# daglib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  daglib.fobis  daglib.md  doc-generator.md  fpm.toml  index.html  init.csh  search.html
.github/workflows/: CI.yml
doc/: ford-documentation.md  paper.bib  paper.md
example/: feats-dependency-tree.f90
interface/: edge.html  traverse_func.html
lists/: absint.html  modules.html  procedures.html  types.html
media/: text-art.txt
module/: dag_module.html
output/: README.md  dag-output.json
proc/: add_edge.html  dag_add_edge.html  dag_destroy.html  dag_generate_dependency_matrix.html  dag_generate_digraph.html  dag_get_dependencies.html  dag_get_edge_metadata.html  dag_get_edges.html  dag_get_number_of_vertices.html  dag_get_vertex.html  dag_get_vertex_metadata.html  dag_remove_edge.html  dag_remove_node.html  dag_save_digraph.html  dag_set_edges.html  dag_set_edges_no_atts.html  dag_set_edges_vector_atts.html  dag_set_vertex_info.html  dag_set_vertices.html  dag_toposort.html  dag_traverse.html  edge_constructor.html  get_edge_index.html  init_internal_vars.html  integer_to_string.html  remove_edge.html  set_edge_vector.html  set_edge_vector_vector.html  sort_ascending.html  swap.html  unique.html
sourcefile/: dag_module.f90.html
src/: .dag_implementation.f90.swp  .dag_interface.f90.swp  CMakeLists.txt  assert_implementation.F90  assert_implementation.f90  assert_interface.F90  assert_interface.f90  dag_implementation.F90  dag_implementation.f90  dag_interface.f90  dag_m.f90  dag_module.F90  dag_module.f90  dag_s.f90  vertex_implementation.f90  vertex_interface.F90  vertex_interface.f90  vertex_m.f90  vertex_s.f90
src/git-submodules/: CMakeLists.txt
src/tests/: dag_example.f90
test/: dag_example.f90  dag_example_2.f90  dag_example_3.f90  dag_input_output_test.f90  dag_test.f90  main.f90
tests/: dag_example.f90
tests/integration/: CMakeLists.txt
tests/integration/dag_example/: CMakeLists.txt  dag_example.f90
tests/integration/dep.dat_test/: CMakeLists.txt  depdat_test.f90
tests/integration/jacob-example/: CMakeLists.txt  test-jacob-example.f90
tests/integration/multiple-independents/: CMakeLists.txt  test-multiple-independents.f90
tests/unit/: CMakeLists.txt
tests/unit/input-output/: CMakeLists.txt  dag-vertices-edges.json  dag_input_output_test.f90  main.f90  test-input-output.f90
tipuesearch/: tipuesearch_content.js
type/: dag.html  edge.html  vertex.html
